# advent-of-code

./: .gitignore  Cargo.toml  d05.rs  d08.rs
2020/: Cargo.toml
2020/1/: input.txt  main.rs
2020/2/: main.rs
2020/3/: main.rs
4/: main.rs
6/: main.rs
