[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["Superchausette"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
regex = "1"

[[bin]]
name = "d1"
path = "1/main.rs"

[[bin]]
name = "d2"
path = "2/main.rs"

[[bin]]
name = "d3"
path = "3/main.rs"

[[bin]]
name = "d4"
path = "4/main.rs"

[[bin]]
name = "d5"
path = "5/main.rs"

[[bin]]
name = "d6"
path = "6/main.rs"