[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["Superchausette"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
regex = "1"

[[bin]]
name = "d01"
path = "d01.rs"

[[bin]]
name = "d02"
path = "d02.rs"

[[bin]]
name = "d03"
path = "d03.rs"

[[bin]]
name = "d04"
path = "d04.rs"

[[bin]]
name = "d05"
path = "d05.rs"

[[bin]]
name = "d06"
path = "d06.rs"

[[bin]]
name = "d07"
path = "d07.rs"

[[bin]]
name = "d08"
path = "d08.rs"

[[bin]]
name = "d09"
path = "d09.rs"

[[bin]]
name = "d10"
path = "d10.rs"