[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["Superchausette <superchausette@superchausette.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



[[bin]]
name = "d1"
path = "1/main.rs"

[[bin]]
name = "d2"
path = "2/main.rs"
